[OOPS]  Added in updates to main.sh to accommodate usage of internal Cleaner